fix extra space below project board

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -7,7 +7,6 @@ body {
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
-  height: 100%;
 
   .flash-message-row {
     width: 100%;
@@ -24,7 +23,10 @@ body {
 }
 
 .content-wrapper {
-  height: 100%;
-  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   position: absolute;
+  overflow-y: auto;
 }
